--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js,json,graphql ./api/index.js",
+    "server": "npx json-server --watch api/data/dados.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
